<resources>
    <string name="app_name">Around the world</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="place_image_content_desc">Image of a place</string>
    <string name="place_content_desc">Image of place</string>
    <string name="my_activities">MY ACTIVITIES</string>
    <string name="place_image_transition_name">tImage</string>
    <string name="place_name_holder_transition_name">tNameHolder</string>
    <string name="toolbar_transition_name">tActionBar</string>
    <string name="toggle_title">Show as grid</string>
</resources>
