<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_detail" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/placeImage"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:contentDescription="@string/place_content_desc"
            android:scaleType="centerCrop"
            android:transitionName="@string/place_image_transition_name" />

        <LinearLayout
            android:id="@+id/llEditTextHolder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#95000000">

            <EditText
                android:id="@+id/etTodo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:inputType="text"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/placeNameHolder"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/primary_dark"
            android:transitionName="@string/place_name_holder_transition_name">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingEnd="0dp"
                android:paddingStart="10dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/btn_add"
            android:layout_width="@dimen/floating_button_size"
            android:layout_height="@dimen/floating_button_size"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="28dp"
            android:alpha="0.0"
            android:background="@drawable/btn_background"
            android:contentDescription="@null"
            android:elevation="@dimen/button_elevation"
            android:src="@drawable/icn_add" />

    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="-10dp"
        android:text="@string/my_activities"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/white" />

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:requiresFadingEdge="vertical" />

</LinearLayout>
